--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-_site/
-.sass-cache/
-.jekyll-cache/
+_gh_pages
 .jekyll-metadata
+.jekyll-cache
+.ruby-version
+.sass-cache
+.tweet-cache
+_site
+_algolia_api_key
+vendor
+.bundle
