--- a/_config.yml
+++ b/_config.yml
@@ -11,16 +11,17 @@ data_dir: _data
 includes_dir: _includes
 theme: jekyll-theme-leap-day
 title: Data Science Tweets of the Day
-description: "Curated by <a href=\"https://twitter.com/ceshine_en\" style=\"color: LightGray;\">@ceshine_en</a>"
+description: "Curated by <a href=\"https://twitter.com/ceshine_en\" style=\"color: LightGray;\">@ceshine_en</a>. Inpired by <a href=\"https://twitter.com/wtfjht\" style=\"color: LightGray;\">@WTFJHT</a>."
 show_downloads: false
 google_analytics: UA-24180048-5
 paginate: 1
 paginate_path: "/page/:num/"
 plugins:
-- github-pages
-- jekyll-paginate
-- jekyll-seo-tag
-- jekyll-sitemap
+  - github-pages
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
 sass:
   sass_dir: _sass
   # style: compressed
