Create a logo for twitter summary card

--- a/_config.yml
+++ b/_config.yml
@@ -44,5 +44,5 @@ defaults:
     values:
       type: posts
       image:
-        twitter: "/public/dstotd-wide.png"
+        twitter: "/public/dstotd-twitter.png"
         facebook: "/public/dstotd-wide.png"
