Seems jekyll-seo-tag only support one image for both og and twitter.

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,4 @@ defaults:
       path: ""
     values:
       type: posts
-      image:
-        twitter: "/public/dstotd-twitter.png"
-        facebook: "/public/dstotd-wide.png"
+      image: "/public/dstotd-twitter.png"
