--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,7 @@ sass:
   sass_dir: _sass
   style: compressed
 # SEO
-logo: "/public/dstotd-wide.png"
-pagelogo: "/public/logo.png"
+logo: "/public/dstotd-twitter.png"
 twitter:
   username: ceshine_en
   card: summary
